# content-search-service

./: Cargo.toml  Dockerfile  release.sh
src/: main.rs
src/config/: Config-Dev.toml
src/lib/: config.rs  entities.rs  handlers.rs  infrastructure.rs  lib.rs  models.rs  repositories.rs  services.rs
src/lib/config/: database_config.rs  indexer_runner_config.rs  logger_config.rs  server_config.rs
src/lib/entities/: game.rs  movie.rs  recipe.rs  tv.rs
src/lib/handlers/: requests.rs  responses.rs  search_handler.rs
src/lib/handlers/requests/: search_request.rs
src/lib/handlers/responses/: search_response.rs
src/lib/infrastructure/: app_runner.rs  app_state.rs  di_container.rs  http_server.rs
src/lib/models/: doc_details.rs  entity.rs  language.rs
src/lib/repositories/: game_repository_impl.rs  movie_repository_impl.rs  recipe_repository_impl.rs  tv_repository_impl.rs
src/lib/services/: doc_details_retriever.rs  impls.rs  index_processor.rs  index_task.rs  indexer_runner.rs  search_service_impl.rs
src/lib/services/impls/: game_doc_details_retriever.rs  movie_doc_details_retriever.rs  recipe_doc_details_retriever.rs  tv_doc_details_retriever.rs
tests/integration/: containers.rs  mod.rs  search_handler.rs
tests/integration/config/: Config-Test.toml
tests/integration/config/db/: init.sql
