[package]
name = "content-search-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[[test]]
name = "unitary_tests"
path = "tests/unitary/mod.rs"

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"

[dependencies]
tokio = { version = "1.39.0", features = ["full", "test-util", "time"] }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["json-deserializer"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
derive_builder = "0.20.0"
log = "0.4.22"
env_logger = "0.11.5"
anyhow = "1.0.86"
serde = { version = "1.0.208", features = ["derive"] }
tantivy = "0.22.0"
futures = "0.3.30"
dashmap = "6.0.1"
config = { version = "0.14.0", features = ["toml"] }
toml = "0.8.19"

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
rstest = "0.22.0"
rstest_reuse = "0.7.0"
rand = "0.8.5"
mockall = "0.13.0"
testcontainers = { version = "0.21.1", features = ["blocking"] }
ctor = "0.2.8"